--- a/.testing/Dockerfile-template
+++ b/.testing/Dockerfile-template
@@ -2,22 +2,16 @@
 FROM davegill/wrf-coop:fourthtry
 MAINTAINER Dave Gill <gill@ucar.edu>
 
-#RUN echo _HERE1_
-#RUN git clone https://github.com/davegill/WRF.git davegill/WRF \
-#  && cd davegill/WRF \
-#  && git fetch origin +refs/pull/4/merge: \
-#  && git checkout -qf FETCH_HEAD \
-#  && cd .. \
-#  && mv WRF /wrf/WRF
-#RUN echo _HERE2_
-
-RUN git clone https://github.com/wrf-model/WRF.git WRF \
-  && cd WRF \
-  && git checkout release-v4.1.1 \
-  && git checkout master \
-  && git checkout develop \
-  && git checkout release-v4.1 \
-  && cd ..
+RUN git clone https://github.com/TRAVIS_REPO_SLUG.git TRAVIS_REPO_SLUG \
+  && cd TRAVIS_REPO_SLUG \
+  && git fetch origin +refs/pull/TRAVIS_PULL_REQUEST/merge: \
+  && git checkout -qf FETCH_HEAD \
+  && git branch
+  && echo branch to be TRAVIS_PULL_REQUEST_BRANCH
+  && git log --oneline -10
+  && echo want SHA to be TRAVIS_PULL_REQUEST_SHA
+  && cd .. \
+  && mv WRF /wrf/WRF
 
 VOLUME /wrf
 CMD ["/bin/tcsh"]
