--- a/.testing/Dockerfile-template
+++ b/.testing/Dockerfile-template
@@ -7,9 +7,9 @@ RUN git clone https://github.com/TRAVIS_REPO_SLUG.git TRAVIS_REPO_SLUG \
   && git fetch origin +refs/pull/TRAVIS_PULL_REQUEST/merge: \
   && git checkout -qf FETCH_HEAD \
   && git branch
-  && echo branch to be TRAVIS_PULL_REQUEST_BRANCH
-  && git log --oneline -10
-  && echo want SHA to be TRAVIS_PULL_REQUEST_SHA
+  && echo branch to be TRAVIS_PULL_REQUEST_BRANCH \
+  && git log --oneline -10 \
+  && echo want SHA to be TRAVIS_PULL_REQUEST_SHA \
   && cd .. \
   && mv WRF /wrf/WRF
 
