Wow, yet more missing "\" EOLs, well, just one really

--- a/.testing/Dockerfile-template
+++ b/.testing/Dockerfile-template
@@ -6,7 +6,7 @@ RUN git clone https://github.com/TRAVIS_REPO_SLUG.git TRAVIS_REPO_SLUG \
   && cd TRAVIS_REPO_SLUG \
   && git fetch origin +refs/pull/TRAVIS_PULL_REQUEST/merge: \
   && git checkout -qf FETCH_HEAD \
-  && git branch
+  && git branch \
   && echo branch to be TRAVIS_PULL_REQUEST_BRANCH \
   && git log --oneline -10 \
   && echo want SHA to be TRAVIS_PULL_REQUEST_SHA \
