--- a/.testing/Dockerfile-template
+++ b/.testing/Dockerfile-template
@@ -1,5 +1,5 @@
 #
-FROM davegill/wrf-coop:fourthtry
+FROM davegill/wrf-coop:fifthtry
 MAINTAINER Dave Gill <gill@ucar.edu>
 
 RUN git clone https://github.com/TRAVIS_REPO_SLUG.git TRAVIS_REPO_SLUG \
@@ -12,6 +12,8 @@ RUN git clone https://github.com/TRAVIS_REPO_SLUG.git TRAVIS_REPO_SLUG \
   && echo want SHA to be TRAVIS_PULL_REQUEST_SHA \
   && cd .. \
   && mv WRF /wrf/WRF
+
+RUN curl -SL http://www2.mmm.ucar.edu/wrf/dave/script.tar | tar -xC /wrf
 
 VOLUME /wrf
 CMD ["/bin/tcsh"]
